Fix code blocks with line numbers on mobile

--- a/docs/theme/sass/_theme_layout.sass
+++ b/docs/theme/sass/_theme_layout.sass
@@ -2072,7 +2072,7 @@ a.copybtn.o-tooltip--left
     left: 0
 
   +media($tablet)
-    right: 3.5em
+    right: 2em
 
   &:before
     content: ""
